appId: com.headlamp.uno
---

- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Personality assessments
    direction: DOWN
- tapOn: "Personality assessments" 

- scrollUntilVisible:
    element:
      text: "Core values"
    direction: DOWN
    centerElement : true 
- waitForAnimationToEnd    
- runFlow:
    when:
      visible: BEGIN
    commands:
      - tapOn: 
          text: BEGIN
          below:
           text: "Core values"
- runFlow:
    when:
      visible: "TAKE AGAIN" 
    commands:
      - tapOn:
          text: "TAKE AGAIN"
          below:
           text: "Core values"
- waitForAnimationToEnd
- runFlow:
    when:
      visible: "CONTINUE" 
    commands:
      - tapOn:
          text: "CONTINUE"
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
    direction: DOWN
- tapOn:
    id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
- scrollUntilVisible:
    element:
      id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
    direction: DOWN
- tapOn:
    id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
- scrollUntilVisible:
    element:
      id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
    direction: DOWN
- tapOn:
    id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
- scrollUntilVisible:
    element:
      id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
    direction: DOWN
- tapOn:
    id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
- scrollUntilVisible:
    element:
      id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"
    direction: DOWN
- tapOn:
    id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"
- scrollUntilVisible:
    element:
      id: "checked-7cc6750d-4c4f-4bab-a7ba-42daa35165e3"
    direction: DOWN
- tapOn:
    id: "checked-7cc6750d-4c4f-4bab-a7ba-42daa35165e3"
- scrollUntilVisible:
    element:
      id: "checked-42a2e85c-95c2-409a-be16-87e80dad4512"
    direction: DOWN
- tapOn:
    id: "checked-42a2e85c-95c2-409a-be16-87e80dad4512"
- scrollUntilVisible:
    element:
      id: "checked-9b2833de-0777-493c-8bad-3d3c98194c0d"
    direction: DOWN
- tapOn:
    id: "checked-9b2833de-0777-493c-8bad-3d3c98194c0d"
- scrollUntilVisible:
    element:
      id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
    direction: DOWN
- tapOn:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
- scrollUntilVisible:
    element:
      id: "checked-c9e9acb3-1fb2-486d-9310-e92186ce6593"
    direction: DOWN
- tapOn:
    id: "checked-c9e9acb3-1fb2-486d-9310-e92186ce6593"
- scrollUntilVisible:
    element:
      id: "checked-a4e85821-6243-4530-a9da-7d264fe6cc62"
    direction: DOWN
- tapOn:
    id: "checked-a4e85821-6243-4530-a9da-7d264fe6cc62"
- scrollUntilVisible:
    element:
      id: "checked-ee353374-1e30-4642-8db4-38cfa2e603b6"
    direction: DOWN
- tapOn:
    id: "checked-ee353374-1e30-4642-8db4-38cfa2e603b6"
- scrollUntilVisible:
    element:
      id: "checked-311284e7-3171-4ddc-a355-17f6f19be87a"
    direction: DOWN
- tapOn:
    id: "checked-311284e7-3171-4ddc-a355-17f6f19be87a"
- scrollUntilVisible:
    element:
      id: "checked-e91f1771-7628-479d-b28f-5dc0ea95feb2"
    direction: DOWN
- tapOn:
    id: "checked-e91f1771-7628-479d-b28f-5dc0ea95feb2"
- scrollUntilVisible:
    element:
      id: "checked-7c48ef61-936d-4f47-9578-664f8af46387"
    direction: DOWN
- tapOn:
    id: "checked-7c48ef61-936d-4f47-9578-664f8af46387"
- scrollUntilVisible:
    element:
      id: "checked-ad4cfca6-3671-42d1-b1a4-e79ae5d5b496"
    direction: DOWN
- tapOn:
    id: "checked-ad4cfca6-3671-42d1-b1a4-e79ae5d5b496"
- scrollUntilVisible:
    element:
      id: "checked-628e49e1-a72a-43a7-829e-5be7cb47076e"
    direction: DOWN
- tapOn:
    id: "checked-628e49e1-a72a-43a7-829e-5be7cb47076e"
- scrollUntilVisible:
    element:
      id: "checked-bcd9dc9c-a136-4b70-8865-0995f97fa647"
    direction: DOWN
- tapOn:
    id: "checked-bcd9dc9c-a136-4b70-8865-0995f97fa647"

- scrollUntilVisible:
   element:
     id: "button"
   direction: DOWN
   centerElement: false
   speed: 70
   timeout: 50000 
- tapOn: "core-assessment-continue"
- waitForAnimationToEnd
- tapOn:
    id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
- tapOn:
    id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
- tapOn:
    id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
- tapOn:
    id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
- tapOn:
    id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"
- tapOn:
    id: "checked-7cc6750d-4c4f-4bab-a7ba-42daa35165e3"
- scrollUntilVisible:
   element:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
   direction: DOWN
   centerElement: true
- tapOn:
    id: "checked-42a2e85c-95c2-409a-be16-87e80dad4512"
- tapOn:
    id: "checked-9b2833de-0777-493c-8bad-3d3c98194c0d"
- tapOn:
    id: "checked-2e9607d6-7c66-4c52-8a55-7996f64e30f2"
- tapOn:
    id: "checked-c9e9acb3-1fb2-486d-9310-e92186ce6593"
- scrollUntilVisible:
   element:
     id: "button"
   direction: DOWN
   centerElement: false
- tapOn: "core-assessment-continue"
- waitForAnimationToEnd
- tapOn:
    id: "checked-ca4a3a70-7c28-4b3c-9503-edcce7c9a563"
- tapOn:
    id: "checked-5eea3ee7-d873-4c65-9e74-f4f2c40670a2"
- tapOn:
    id: "checked-dff31bb9-85b4-44d6-9cb2-7c8bd0fc661e"
- tapOn:
    id: "checked-b8917911-91bd-45e3-8607-93f008aef3a0"
- tapOn:
    id: "checked-63402ecf-d35d-49d7-b889-8823671378ad"

- tapOn: COMPLETE
- waitForAnimationToEnd
- assertVisible : assessment Complete 

