appId: com.headlamp.uno
---
- killApp
- launchApp:
   appId: com.headlamp.uno.stage
# health questionnaires 

- tapOn: "Power"
- scrollUntilVisible:
    element:  
      text: Health questionnaires
    direction: DOWN
- tapOn: "Health questionnaires" 

- scrollUntilVisible:
    element:
      text: "Health questionnaires"
    direction: DOWN
    centerElement: true
- runFlow:
    when:
      visible:
         text: "BEGIN"
         below:
            text: "Health questionnaires"
    commands:
      - tapOn: 
         text: "BEGIN"
         below:
           text: "Health questionnaires"
- runFlow:
    when:
      visible:
         text: "Take again"
         below:
            text: "Health questionnaires"
    commands:
      - tapOn:
          text: TAKE AGAIN
          below:
           text: "Health questionnaires)"
      - waitForAnimationToEnd
- swipe:
    direction: DOWN      
- tapOn:
    text: "Never"
    index: 0
    below:
      text: "1 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "2 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "3 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "4 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "5 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "6 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "7 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "8 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "9 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "10 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "11 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "12 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "13 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "14 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "15 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "16 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "17 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "18 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "19 of 20"

- tapOn:
    text: "Never"
    index: 0
    below:
      text: "20 of 20"

- waitForAnimationToEnd
- tapOn:
    id: "button"

-  runFlow:
        when:
            visible:
                text: "Got IT"
        commands:
            - tapOn: 
               text:  "Got IT"   

- assertVisible: "Assessment complete"
- assertVisible: "UCLA Loneliness Scale"