appId: com.headlamp.uno.stage
---
# # - killApp
# - launchApp:
#    appId: com.headlamp.uno.stage
# # Redirecting to hr in power , adding , move to history and removing providers , adding and deleting symptoms and family records
# - tapOn: "Power"
# - scrollUntilVisible:
#     element:  
#       text: Health Records
#     direction: DOWN
# - tapOn:
#     text: "Health records"
# - runFlow:
#     when :
#       visible : "continue"
#     commands:
#      - tapOn:
#         text: "continue"
# - assertNoDefectsWithAI

# # ADDING 3 DIFF PROVIDER 
# - scrollUntilVisible:
#     element:
#         text: "add Provider"
#         below:
#           text : "Primary care provider"
#     direction: DOWN
#     centerElement: true   

# - assertVisible: "Primary care provider"
# - tapOn:
#    text : "add Provider"
#    below:
#     text : "Primary care provider"
# - waitForAnimationToEnd

# - assertNoDefectsWithAI
# - tapOn:
#     id: "text-input-outline"
#     index: 0
# - waitForAnimationToEnd

# - inputText: "Dr. J."    
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 1
# - inputText: "Doe"   
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 2
# - inputText: "ABC hospital"       
# - waitForAnimationToEnd
# - tapOn: "Primary care provider"
# - tapOn:
#     id: "button"
# - waitForAnimationToEnd
# - assertVisible :
#     text : Dr. J. Doe
#     below:
#       text : "Primary care provider"
# - scrollUntilVisible:
#     element:
#       text: Add MEDICATION
#     direction: DOWN
#     centerElement: false          
# - assertVisible: "Mental health care providers"
# - tapOn:
#    text: "ADD PROVIDER"
#    below:
#     text : "Mental health care providers"
# - assertNoDefectsWithAI
# - waitForAnimationToEnd



# - tapOn: "Provider type"
# - waitForAnimationToEnd
# - assertVisible: "Psychiatric Prescriber (Psychiatrist, Nurse Practitioner, Physician Assistant, etc.)"
# - assertVisible: "Therapist / Psychologist"
# - waitForAnimationToEnd

# - tapOn: "Therapist / Psychologist"
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 0
# - waitForAnimationToEnd
# - inputText: "Dr. B."    
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 1
# - waitForAnimationToEnd
# - inputText: "Brown"   
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 2
# - inputText: "ABC hospital"       
# - waitForAnimationToEnd
# - tapOn: "Mental health care provider"
# - tapOn:
#     id: "button"
# - waitForAnimationToEnd
# - assertVisible :
#     text : Dr. B. Brown
#     below:
#       text : "Mental health care providers"
# - waitForAnimationToEnd
# - tapOn:
#    text: "ADD PROVIDER"
#    below:
#     text : "Mental health care providers"
# - assertNoDefectsWithAI
# - tapOn: "Provider type"
# - waitForAnimationToEnd
# - assertVisible: "Psychiatric Prescriber (Psychiatrist, Nurse Practitioner, Physician Assistant, etc.)"
# - assertNotVisible: "Therapist / Psychologist"
# - waitForAnimationToEnd

# - tapOn: "Psychiatric Prescriber (Psychiatrist, Nurse Practitioner, Physician Assistant, etc.)"
# - waitForAnimationToEnd

# - tapOn:
#     id: "text-input-outline"
#     index: 0
# - waitForAnimationToEnd

# - inputText: "Dr. G."    
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 1
# - waitForAnimationToEnd

# - inputText: "Glover"   
# - waitForAnimationToEnd
# - tapOn:
#     id: "text-input-outline"
#     index: 2
# - inputText: "ABC hospital"       
# - waitForAnimationToEnd
# - tapOn: "Mental health care provider"
# - tapOn:
#     id: "button"
# - waitForAnimationToEnd

# - assertNoDefectsWithAI

# #  add medication


# - scrollUntilVisible:
#     element:
#       text: Add MEDICATION
#     direction: DOWN
#     centerElement: true      
# - waitForAnimationToEnd        
# - assertVisible: "MEDICATIONS"
# - waitForAnimationToEnd
# - tapOn: "Add MEDICATION"
# - waitForAnimationToEnd
# - tapOn: "Medication name"
# - waitForAnimationToEnd
# - inputText: "paracetamol"
# - waitForAnimationToEnd
# - tapOn:
#     point: "50%,37%"
# - waitForAnimationToEnd

# - tapOn:
#     id: "text-input-outline"
#     index: 0
#     retryTapIfNoChange: false
# - waitForAnimationToEnd
# - inputText: 500 mg    

# - tapOn:
#     id: "text-input-outline"
#     index: 1
#     retryTapIfNoChange: false
# - waitForAnimationToEnd
# - inputText: 2 
# - tapOn: "Month"
# - waitForAnimationToEnd
# - tapOn: "June"
# - waitForAnimationToEnd
# - tapOn: "Year"
# - waitForAnimationToEnd
# - tapOn: 
#     text : "2023"
#     retryTapIfNoChange: false
# - tapOn:
#     text: "ADD MEDICATION"
#     retryTapIfNoChange: false      
# - assertVisible :
#     text : "Paracetamol\n"
#     below:
#       text : "MEDICATIONS"

# # adding symptoms and asserting the number in front 

# - scrollUntilVisible:
#     element:
#       text: "VIEW ALL"
#       below:
#         text: "Side effects and symptoms"
# - tapOn: "VIEW ALL"
# - assertVisible: "Anything new with your symptoms or side effects?"
# - tapOn:
#     id: "Abdominal pain-chip"
# - tapOn:
#     id: "Joint pain-chip"
# - tapOn:
#     id: "Fever-chip"
# - tapOn:
#     id: "text-input-outlined"
# - inputText: "sleep"
# - pressKey: "enter"
# - assertVisible:
#     id: "Increased sleep-chip"
# - assertVisible:
#     id: "Less sleep-chip"
# - tapOn:
#     id: "Increased sleep-chip"
# - tapOn:
#     id: "button"
# - tapOn:
#     id: "slider-track-mark"
#     index: 3
# - tapOn:
#     id: "slider-track-mark"
#     index: 8
# - tapOn:
#     id: "slider-track-mark"
#     index: 15
# - tapOn:
#     id: "slider-track-mark"
#     index: 22
# - tapOn:
#     id: "button"
# - assertVisible: "Abdominal pain"
# - assertVisible: "Fever"
# # move to history flow 

- scrollUntilVisible:
    element:
      text: "Dr. J. Doe"
      below :
        text: "Primary care provider"
    direction: UP
    centerElement: true

- tapOn: "Dr. J. Doe"
- waitForAnimationToEnd

# move to history 
- tapOn:
    id: "button-text"
- assertVisible: "Month is required"
- tapOn: "Month"
- waitForAnimationToEnd
- tapOn: "October"
- tapOn:
    id: "button-text"
- waitForAnimationToEnd

- assertVisible: "Year is required"
- waitForAnimationToEnd
- tapOn: "Year"
- waitForAnimationToEnd
- tapOn: "2022"
- waitForAnimationToEnd
- tapOn:
    id: "button"
    retryTapIfNoChange: false

- waitForAnimationToEnd

- assertNotVisible :
    text: "Dr. J. Doe"
    below:
      text: "Primary care provider"
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: Medications
    direction: DOWN
    centerElement: false
- waitForAnimationToEnd

- assertVisible: 
    text : "Dr. B. Brown"
    above:
      text: "Dr. G. Glover"
- tapOn: "Dr. B. Brown"
- waitForAnimationToEnd

- tapOn:
    id: "button-text"
- waitForAnimationToEnd
- assertVisible: "Month is required"
- tapOn: "Month"
- tapOn: "july"
- tapOn:
    id: "button-text"
- waitForAnimationToEnd

- assertVisible: "Year is required"
- waitForAnimationToEnd
- tapOn: "Year"
- waitForAnimationToEnd
- tapOn: "2023"
- waitForAnimationToEnd
- tapOn:
    id: "button"
    retryTapIfNoChange: false
- waitForAnimationToEnd

- assertNotVisible :
    text: "Dr. B. Brown"
    below:
      text: "Mental health care providers"
- scrollUntilVisible:
    element:
      text : Dr. G. Glover
      below:
        text : "Mental health care providers"
    centerElement: false
- tapOn: "Dr. G. Glover"
- tapOn:
    id: "button-text"
- waitForAnimationToEnd

- assertVisible: "Month is required"
- tapOn: "Month"
- tapOn: "june"
- tapOn:
    id: "button-text"
- waitForAnimationToEnd
- assertVisible: "Year is required"
- tapOn: "Year"
- scrollUntilVisible:
    element:
      text : 2005
      below:
        text : 2006
- waitForAnimationToEnd
- tapOn: "2005"
- waitForAnimationToEnd

- tapOn:
    id: "button"
    retryTapIfNoChange: false
- waitForAnimationToEnd
- assertNotVisible :
    text: "Dr. G. Glover"
    below:
      text: "Mental health care providers"

# move medication to history 

- scrollUntilVisible:
    element:
      text : add medication
    centerElement: false

- assertVisible :
    text : "Paracetamol\n"
    below:
      text : "MEDICATIONS"
- tapOn: "Paracetamol\n"

- waitForAnimationToEnd
- tapOn: "Month"
- scrollUntilVisible:
    element:
      text : November
      below:
        text : "October"
- tapOn: "November"
- tapOn:
    id: "button-text"
- waitForAnimationToEnd
- assertVisible: "Year is required"
- tapOn: "Year"
- waitForAnimationToEnd
- tapOn: "2023"
- waitForAnimationToEnd
- tapOn:
    id: "button"
    retryTapIfNoChange: false





# remove symptoms
- scrollUntilVisible:
    element:
      text: "VIEW ALL"
      below:
        text: "Side effects and symptoms"
- tapOn: "VIEW ALL"
- tapOn:
    id: "Joint pain-chip"
- tapOn:
    id: "Fever-chip"
- tapOn:
    id: "Abdominal pain-chip"
- tapOn:
    id: "Increased sleep-chip"
- tapOn: "No side effects or symptoms"
- tapOn:
    id: "button"
- assertNotVisible: "Abdominal pain"
- assertNotVisible: "Fever"

# remove provider in history 

- tapOn:
    text : "HISTORY"
- assertVisible: 
    text : "\nDr. J. Doe, 󰅂"
    below: 
      text : "Primary care providers"
- tapOn:
    id: "cardListItem"
    index: 0
- assertVisible: "Is this inaccurate?"
- waitForAnimationToEnd
# mark inaccurate
- tapOn:
    id: "button"
    retryTapIfNoChange: false
- waitForAnimationToEnd
- assertNotVisible :
    text: "\nDr. J. Doe, 󰅂"
    below:
      text: "Primary care provider"
- waitForAnimationToEnd
- tapOn:
    id: "cardListItem"
    index: 1
    retryTapIfNoChange: false
- assertVisible: "Dr. B. Brown"
- tapOn:
    id: "Button"
    retryTapIfNoChange: false
- waitForAnimationToEnd
- tapOn:
    id: "cardListItem"
    index: 1
    retryTapIfNoChange: false
- waitForAnimationToEnd
- assertVisible: "Dr. G. Glover"
- tapOn:
    id: "button"
    retryTapIfNoChange: false
- waitForAnimationToEnd
# medication in history , hide , unhide and remove


- tapOn:
    text: "HISTORY"
- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: Add MEDICATION
    direction: DOWN
    centerElement: true    
- waitForAnimationToEnd
- tapOn: "2023-2023\nParacetamol\n"
- waitForAnimationToEnd

- assertVisible: 
    text : "Mark as inaccurate"
    above :
      text : "Hide from providers"
- waitForAnimationToEnd
- tapOn: "Hide from providers"
- waitForAnimationToEnd
- assertVisible: "By tapping the button below, this item will not be visible to your healthcare providers."      
- waitForAnimationToEnd
- tapOn:
    text : "HIDE"
    retryTapIfNoChange: false

- waitForAnimationToEnd
- tapOn: "2023-2023\nParacetamol\n"
- waitForAnimationToEnd

- assertVisible: 
    text : "Mark as inaccurate"
    above :
      text : "Show from providers"
- waitForAnimationToEnd
- tapOn: "Show from providers"
- waitForAnimationToEnd
- assertVisible: "By tapping the button below, this item will be visible to your healthcare providers."   
- waitForAnimationToEnd
- tapOn:
    text : "SHOW"
    retryTapIfNoChange: false

- waitForAnimationToEnd
- tapOn: "2023-2023\nParacetamol\n"
- waitForAnimationToEnd
- assertVisible: 
    text : "Mark as inaccurate"
    above :
      text : "Hide from providers"
- waitForAnimationToEnd

- tapOn: "Mark as inaccurate"
- tapOn:
    id: "button-text"
    retryTapIfNoChange: false





# Family in hr
- tapOn : "family" 
- assertNoDefectsWithAI
- assertVisible: "Family health"
- tapOn: "ADD FAMILY HEALTH"
- assertVisible: "Mother"
- assertVisible: "Brother(s)"
- tapOn: "Mother"
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      text: "Other conditions" 
    direction: DOWN
    centerElement: False
- tapOn: "Anxiety"
- scrollUntilVisible:
    element:
      text: SAVE
    direction: DOWN
    centerElement: False
- tapOn:
    id: "button"    
